--- a/index.html
+++ b/index.html
@@ -93,37 +93,37 @@
 
         <div class="owl-carousel owl-theme owl-container" id="services">
           <div class="slide slide-1">
-              <div class="slide-content">
+              <div class="slide-content slide-content-1">
                   <h1>Pour l’achat d’une maison</h1>
-                  <p>Vous avez trouvé la maison parfaite et vous êtes sur le point de réaliser votre rêve d’être enfin propriétaire. Que ce soit la première ou une nouvelle propriété, l’achat d’une maison est une décision qui comporte de multiples implications et surtout, qui ne doit pas être prise à la légère. Avant d’aller trop loin dans votre démarche, je vous accompagne dans le processus d’une bonne planification financière. Vous pourrez ensuite faire des choix plus éclairés… et éviter des mauvaises surprises!</p>
+                  <p class="owl-para">Vous avez trouvé la maison parfaite et vous êtes sur le point de réaliser votre rêve d’être enfin propriétaire. Que ce soit la première ou une nouvelle propriété, l’achat d’une maison est une décision qui comporte de multiples implications et surtout, qui ne doit pas être prise à la légère. Avant d’aller trop loin dans votre démarche, je vous accompagne dans le processus d’une bonne planification financière. Vous pourrez ensuite faire des choix plus éclairés… et éviter des mauvaises surprises!</p>
                   <button class="rounded-pill bg-primary"><a class="text-white" href="#contact">En savoir plus</a></button>
               </div>
           </div>
           <div class="slide slide-2">
-              <div class="slide-content">
+              <div class="slide-content slide-content-2">
                   <h1>Pour la protection de l’entreprise</h1>
-                  <p>Il serait dommage d’investir votre temps et votre argent à bâtir votre entreprise, et de ne pas planifier sa protection ni votre sécurité financière afin de faire face aux imprévus. Ensemble, nous pourrons créer un programme de sécurité financière sur mesure, qui comprend plusieurs volets, dont la protection de votre entreprise, la rétention de vos bons employés, la planification successorale et gestion du patrimoine, la planification de la relève et la planification d’une retraite bien méritée!</p>
+                  <p class="owl-para">Il serait dommage d’investir votre temps et votre argent à bâtir votre entreprise, et de ne pas planifier sa protection ni votre sécurité financière afin de faire face aux imprévus. Ensemble, nous pourrons créer un programme de sécurité financière sur mesure, qui comprend plusieurs volets, dont la protection de votre entreprise, la rétention de vos bons employés, la planification successorale et gestion du patrimoine, la planification de la relève et la planification d’une retraite bien méritée!</p>
                   <button class="rounded-pill bg-primary"><a class="text-white" href="#contact">En savoir plus</a></button>
               </div>
           </div>
           <div class="slide slide-3">
-              <div class="slide-content">
+              <div class="slide-content slide-content-3">
                   <h1>Pour la protection de votre famille</h1>
-                  <p>La vie de couple et l’arrivée des enfants apportent un lot de questionnements financiers. Ma contribution à trouver la solution appropriée commence par une rencontre afin de comprendre clairement vos objectifs et vos rêves, et ensuite d’analyser votre situation. Je travaille avec vous pour établir un programme de sécurité financière adapté qui répond à trois objectifs clés : Fournir une sécurité financière à votre famille après votre décès, une protection en cas de maladie grave ou d’arrêt de travail en raison d’une invalidité, et prévoir un fonds d’urgence en cas de période difficile.</p>
+                  <p class="owl-para">La vie de couple et l’arrivée des enfants apportent un lot de questionnements financiers. Ma contribution à trouver la solution appropriée commence par une rencontre afin de comprendre clairement vos objectifs et vos rêves, et ensuite d’analyser votre situation. Je travaille avec vous pour établir un programme de sécurité financière adapté qui répond à trois objectifs clés : Fournir une sécurité financière à votre famille après votre décès, une protection en cas de maladie grave ou d’arrêt de travail en raison d’une invalidité, et prévoir un fonds d’urgence en cas de période difficile.</p>
                   <button class="rounded-pill bg-primary"><a class="text-white" href="#contact">En savoir plus</a></button>
               </div>
           </div>
           <div class="slide slide-4">
-              <div class="slide-content">
+              <div class="slide-content slide-content-4">
                   <h1>Pour vos placements et votre retraite</h1>
-                  <p>Des études démontrent qu’en travaillent avec un planificateur financier, les gens accumulent, en moyenne, quatre fois plus d’actifs! Pourquoi? C’est notre mission! Êtes-vous de ceux qui n’ont jamais calculé le montant dont ils auront besoin au moment de la retraite? Selon vos ambitions et vos objectifs de vie, je vous accompagne dans la planification de votre retraite à l’aide un programme de sécurité financière personnalisé, correspondant à chacune des étapes importantes de votre vie  en tenant compte des imprévus. Mon expertise est à votre portée, la tranquillité d'esprit aussi!</p>
+                  <p class="owl-para">Des études démontrent qu’en travaillent avec un planificateur financier, les gens accumulent, en moyenne, quatre fois plus d’actifs! Pourquoi? C’est notre mission! Êtes-vous de ceux qui n’ont jamais calculé le montant dont ils auront besoin au moment de la retraite? Selon vos ambitions et vos objectifs de vie, je vous accompagne dans la planification de votre retraite à l’aide un programme de sécurité financière personnalisé, correspondant à chacune des étapes importantes de votre vie  en tenant compte des imprévus. Mon expertise est à votre portée, la tranquillité d'esprit aussi!</p>
                   <button class="rounded-pill bg-primary"><a class="text-white" href="#contact">En savoir plus</a></button>
               </div>
           </div>
           <div class="slide slide-5">
-              <div class="slide-content">
+              <div class="slide-content slide-content-5">
                   <h1>Pour vos solutions financière</h1>
-                  <p>Peu importe où vous en êtes dans votre vie, vous aurez des décisions à prendre impliquant des aspects financiers. Que ce soit pour vivre en couple, l’achat d’une maison, fonder une famille, épargner pour un projet futur ou pour la retraite, démarrer votre entreprise ou prévoir un montant pour les études des enfants, un seul mot d’ordre : planifier. C’est ce que je fais!</p>
+                  <p class="owl-para">Peu importe où vous en êtes dans votre vie, vous aurez des décisions à prendre impliquant des aspects financiers. Que ce soit pour vivre en couple, l’achat d’une maison, fonder une famille, épargner pour un projet futur ou pour la retraite, démarrer votre entreprise ou prévoir un montant pour les études des enfants, un seul mot d’ordre : planifier. C’est ce que je fais!</p>
                   <button class="rounded-pill bg-primary"><a class="text-white" href="#contact">En savoir plus</a></button>
               </div>
           </div>
